--- a/webapp/front/front/src/app/features/admin/admin-create-announcement-page/admin-create-announcement-page.component.html
+++ b/webapp/front/front/src/app/features/admin/admin-create-announcement-page/admin-create-announcement-page.component.html
@@ -1,6 +1,6 @@
 <div class="cool-static-container">
     <h2 class="card-title">Create an Announcement</h2>
-    <div class="divider"></div>
+    <div class="divider mb-3 mt-3"></div>
 
     <form [formGroup]="announcementForm" (ngSubmit)="onSubmit()" enctype="multipart/form-data">
         <!-- Subject -->
