--- a/webapp/front/front/src/app/features/admin/admin-create-event/admin-create-event.component.html
+++ b/webapp/front/front/src/app/features/admin/admin-create-event/admin-create-event.component.html
@@ -1,6 +1,6 @@
 <div class="cool-static-container m-b-20" style="word-wrap: break-word;" aria-hidden="true">
     <h2 class="card-title">Create New Event</h2>
-    <div class="divider"></div>
+    <div class="divider mb-3 mt-3"></div>
 
     <!-- Form for creating a new event -->
     <form [formGroup]="eventForm" (ngSubmit)="onSubmit()">
