--- a/webapp/front/front/src/app/features/amenities/amenities-reservations-page/amenities-reservations-page.component.html
+++ b/webapp/front/front/src/app/features/amenities/amenities-reservations-page/amenities-reservations-page.component.html
@@ -10,7 +10,7 @@
                 <div class="cool-static-container m-b-20" style="word-wrap: break-word;" aria-hidden="true">
 
                     <!-- If no amenities -->
-                    <div class="no-posts-found" *ngIf="amenities?.length === 0 && !isLoading">
+                    <div class="no-posts-found" *ngIf="amenities?.length === 0 ">
                         <i class="circle-icon fa-solid fa-magnifying-glass"></i>
                         Amenities not found
                     </div>
