--- a/webapp/front/front/src/app/features/service-providers/service-providers-page/service-providers-page.component.html
+++ b/webapp/front/front/src/app/features/service-providers/service-providers-page/service-providers-page.component.html
@@ -33,10 +33,13 @@
           </ng-container>
           <!-- Template shown when there are no workers -->
           <ng-template #noWorkersFound>
-            <div class="no-posts-found">
-              <i class="circle-icon fa-solid fa-magnifying-glass"></i>
-              <span>We could not find service provider in you neighborhood yet!</span>
+            <div class="cool-static-container m-b-20" style="word-wrap: break-word;" aria-hidden="true">
+              <div class="no-posts-found">
+                <i class="circle-icon fa-solid fa-magnifying-glass"></i>
+                <span>We could not find service provider in you neighborhood yet!</span>
+              </div>
             </div>
+            
           </ng-template>
 
         </div>
