--- a/webapp/front/front/src/app/features/admin/admin-service-providers-requests-page/admin-service-providers-requests-page.component.html
+++ b/webapp/front/front/src/app/features/admin/admin-service-providers-requests-page/admin-service-providers-requests-page.component.html
@@ -1,6 +1,16 @@
 <div>
     <div class="req-acc-users-list p-3">
         <!-- If no workers -->
+
+        <div class="f-r-s-c w-100 p-2">
+            <h2 class="mb-0">
+                {{!serviceProviders? 'Pending Requests': 'Current Service Providers'}}
+            </h2>
+            
+        </div>
+        <div class="divider"></div>
+
+
         <div class="user-row" *ngIf="workers.length === 0">
             <div class="information">
                 <div>No new requests.</div>
