feat: revive workers to certain extent

--- a/webapp/front/front/src/app/features/service-providers/service-providers-post-preview/service-providers-post-preview.component.html
+++ b/webapp/front/front/src/app/features/service-providers/service-providers-post-preview/service-providers-post-preview.component.html
@@ -1,4 +1,4 @@
-<div id="blogpost-container" class="worker-blogpost" *ngIf="post">
+<div id="blogpost-container" class="worker-blogpost w-100" *ngIf="post">
     <div class="container">
         <div class="f-c-c-c pt-3 pb-3">
             <!-- Post Header -->
